--- a/index.html
+++ b/index.html
@@ -140,12 +140,7 @@
 				</section>
 				<section data-background-image="lib/img/squiggle-bg-01.svg" data-background-size="contain">
 					<h4>(Happy ↔ Sad) by Chris Gannon</h4>
-					<p class="codepen" data-height="450" data-theme-id="36307" data-default-tab="result" data-user="chrisgannon" data-slug-hash="WpjXVr" style="height: 359px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="😀 ↔️ ☹️ (Happy ↔️ Sad)">
-						<span>See the Pen <a href="https://codepen.io/chrisgannon/pen/WpjXVr/">
-						😀 ↔️ ☹️ (Happy ↔️ Sad)</a> by Chris Gannon (<a href="https://codepen.io/chrisgannon">@chrisgannon</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-					</p>
-					<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+					<img src="lib/img/toggle-good.gif" alt="">
 					<aside class="notes">
 						<ul>
 							<li>This SVG is animated with javascript and responds to user clicks.</li>
@@ -154,12 +149,7 @@
 				</section>
 				<section>
 					<h4>SVG interactive web by Blaz Kemperle</h4>
-					<p class="codepen" data-height="450" data-theme-id="36307" data-default-tab="result" data-user="blazicke" data-slug-hash="jyPVda" data-preview="true" style="height: 265px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Svg Interactive Web">
-						<span>See the Pen <a href="https://codepen.io/blazicke/pen/jyPVda/">
-						Svg Interactive Web</a> by Blaz Kemperle (<a href="https://codepen.io/blazicke">@blazicke</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-					</p>
-					<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+					<img src="lib/img/web.gif" alt="">
 					<aside class="notes">
 						<ul>
 							<li>This example uses javascript to add dots and lines to an SVG in the html. </li>
@@ -282,12 +272,7 @@
 					</aside>
 				</section>
 				<section data-background-image="lib/img/squiggle-bg-01.svg" data-background-size="contain">
-					<p class="codepen" data-height="460" data-theme-id="36307" data-default-tab="html,result" data-user="audreybrockhaus" data-slug-hash="pYEamK" data-editable="true" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Simple SVG Smiley Face">
-							<span>See the Pen <a href="https://codepen.io/audreybrockhaus/pen/pYEamK/">
-							Simple SVG Smiley Face</a> by Audrey Brockhaus (<a href="https://codepen.io/audreybrockhaus">@audreybrockhaus</a>)
-							on <a href="https://codepen.io">CodePen</a>.</span>
-						</p>
-						<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+					<img src="lib/img/smile.png" alt="">
 						<aside class="notes">
 							<ul>
 								<li>What you see when you open SVG in code editor is much friendlier.</li>
@@ -476,12 +461,7 @@ d=&quot;M256,512C114.842,512,0,397.158,0,256c0-62.431,22.727-
 				</section>
 				<section>
 					<h2>Color-flexible icons</h2>
-					<p class="codepen" data-height="450" data-theme-id="36307" data-default-tab="result" data-user="audreybrockhaus" data-slug-hash="zbMXZd" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Color-Flexible Icons">
-						<span>See the Pen <a href="https://codepen.io/audreybrockhaus/pen/zbMXZd/">
-						Color-Flexible Icons</a> by Audrey Brockhaus (<a href="https://codepen.io/audreybrockhaus">@audreybrockhaus</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-					</p>
-					<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+					<img src="lib/img/icons.gif" alt="">
 					<aside class="notes">
 						<ul>
 							<li>So the same icons can appear whatever color is needed.</li>
@@ -603,12 +583,7 @@ Here&rsquor;s some vertically-centered text!&lt;/text&gt;
 				</section>
 				<section>
 					<h2>Animated text fill by Cesar C</h2>
-					<p class="codepen" data-height="450" data-theme-id="36307" data-default-tab="result" data-user="cesar2535" data-slug-hash="ByYXpN" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="Animated text fill with svg text practice">
-						<span>See the Pen <a href="https://codepen.io/cesar2535/pen/ByYXpN/">
-						Animated text fill with svg text practice</a> by Cesar C. (<a href="https://codepen.io/cesar2535">@cesar2535</a>)
-						on <a href="https://codepen.io">CodePen</a>.</span>
-					</p>
-					<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+					<img src="lib/img/interstellar.gif" alt="">
 					<aside class="notes">
 						<ul>
 								<li>Unlike text baked into raster images, SVG text is selectable and can be read by screenreaders.</li>
@@ -617,12 +592,7 @@ Here&rsquor;s some vertically-centered text!&lt;/text&gt;
 				</section>
 				<section>
 						<h2>SVG Text Mask w/ Video Fill by Dudley Storey</h2>
-						<p class="codepen" data-height="450" data-theme-id="36307" data-default-tab="result" data-user="dudleystorey" data-slug-hash="QvvEYQ" data-preview="true" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid black; margin: 1em 0; padding: 1em;" data-pen-title="SVG Text Mask w/ Video Fill">
-							<span>See the Pen <a href="https://codepen.io/dudleystorey/pen/QvvEYQ/">
-							SVG Text Mask w/ Video Fill</a> by Dudley Storey (<a href="https://codepen.io/dudleystorey">@dudleystorey</a>)
-							on <a href="https://codepen.io">CodePen</a>.</span>
-						</p>
-						<script async src="https://static.codepen.io/assets/embed/ei.js"></script>
+						<img src="lib/img/ocean.gif" alt="">
 						<aside class="notes">
 							<li>You would only want to use text in SVG for short passages like names and other labels that will fit within one line</li>
 							<li>because although text in SVG scales beautifully, it cannot do line-wrapping!</li>
@@ -663,7 +633,13 @@ x=&quot;0&quot; y=&quot;0&quot; /&gt;
 						</ul>
 				</section> -->
 				<section class="small">
-						<h2>Resources & References from this talk:</h2>
+						<h2>Going further</h2>
+						<h3>Animating SVG with JavaScript:</h3>
+						<ul>
+							<li><a href="https://greensock.com/gsap" class="block">GreenSock Animation Platform (GSAP):</a>Super-performant HTML5 animation library that morphs paths, creates timeline animations, and fixes cross-browser animation problems</li>
+							<li><a href="https://d3js.org/" class="block">Data-Driven Documents ('D3' aka d3js)</a>For complex data visualization</li>
+						</ul>
+						<h3>Resources & References from this talk:</h3>
 						<ul>
 							<li><strong>Examples: </strong>Simple animated SVG progress-bar &amp; Color-changing icons on CodePen:
 								<a href="https://codepen.io/audreybrockhaus" class="block">https://codepen.io/audreybrockhaus</a>
@@ -672,8 +648,7 @@ x=&quot;0&quot; y=&quot;0&quot; /&gt;
 								<a href="https://alistapart.com/article/finessing-fecolormatrix" class="block">https://alistapart.com/article/finessing-fecolormatrix</a>
 							</li>
 						</ul>
-						<p>&nbsp;</p>
-						<h2>Handy Modules:</h2>
+						<h3>Handy Modules:</h3>
 						<ul>
 							<li>Twig Field Value: 
 								<a href="https://www.drupal.org/project/twig_field_value" class="block">https://www.drupal.org/project/twig_field_value</a></li>
